# imgflip.py

./: .readthedocs.yaml  LICENSE  README.rst  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  reference.rst  requirements.txt
imgflip/: __init__.py  __main__.py  errors.py  models.py  objects.py
