[metadata]
name = imgflip-py
version = 0.0.1
author = SYCK
author_email = oviyangandhi@gmail.com
description = Create memes using imgflip easily!
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/SYCKGit/imgflip-py
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
requires = [aiohttp, requests]