[metadata]
name = imgflip.py
version = 1.0
author = SYCK
author_email = oviyangandhi@gmail.com
description = Create memes using imgflip easily!
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/SYCKGit/imgflip.py
project_urls =
    Documentation = https://imgflip.readthedocs.io/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    aiohttp
    requests